MCR-1739 removed usage of API that is deprecated in Java 9
mycore-webcli still uses Observable and Observer